--- a/demo1/pom.xml
+++ b/demo1/pom.xml
@@ -30,6 +30,13 @@
             <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.2.12</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>demo1</finalName>
