--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
   <packaging>pom</packaging>
   <modules>
     <module>demo1</module>
+      <module>Spring-AOP</module>
   </modules>
   <version>1.0-SNAPSHOT</version>
   <name>Spring-start Maven Webapp</name>
@@ -18,6 +19,18 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>5.3.23</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-aop -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aop</artifactId>
+      <version>5.3.23</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>Spring-start</finalName>
