--- a/Spring-AOP/pom.xml
+++ b/Spring-AOP/pom.xml
@@ -34,6 +34,12 @@
             <version>1.9.9.1</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <finalName>Spring-AOP</finalName>
