--- a/SpringMVC-demo1/src/main/webapp/WEB-INF/web.xml
+++ b/SpringMVC-demo1/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,26 @@
     <!-->默认配置方式：  此配置作用下，SpringMVC的配置文件默认位于WEB-INF下，默认名称为<servlet-name>-
       servlet.xml，例如，以下配置所对应SpringMVC的配置文件位于WEB-INF下，文件名为springMVCservlet.xml-->
     <!-- 配置SpringMVC的前端控制器，对浏览器发送的请求统一进行处理 -->
+
+    <!--    解决获取请求参数的乱码问题，可以使用SpringMVC提供的编码过滤器CharacterEncodingFilter，但是
+    必须在web.xml中进行注册-->
+    <filter>
+        <filter-name>CharacterEncodingFilter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>forceResponseEncoding</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>CharacterEncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <servlet>
         <servlet-name>springMVC</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
