--- a/SpringMVC-demo1/src/main/webapp/WEB-INF/web.xml
+++ b/SpringMVC-demo1/src/main/webapp/WEB-INF/web.xml
@@ -27,6 +27,17 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <!--在web.xml中注册HiddenHttpMethodFilter-->
+    <filter>
+        <filter-name>HiddenHttpMethodFilter</filter-name>
+        <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>HiddenHttpMethodFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+
     <servlet>
         <servlet-name>springMVC</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
