--- a/SpringMVC-demo1/src/main/webapp/WEB-INF/web.xml
+++ b/SpringMVC-demo1/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,10 @@
         "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
         "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
-<web-app>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+         version="4.0">
     <display-name>Archetype Created Web Application</display-name>
     <!-->默认配置方式：  此配置作用下，SpringMVC的配置文件默认位于WEB-INF下，默认名称为<servlet-name>-
       servlet.xml，例如，以下配置所对应SpringMVC的配置文件位于WEB-INF下，文件名为springMVCservlet.xml-->
@@ -54,7 +57,6 @@
         因此需要通过此标签将启动控制DispatcherServlet的初始化时间提前到服务器启动时
         -->
         <load-on-startup>1</load-on-startup>
-
     </servlet>
     <servlet-mapping>
         <servlet-name>springMVC</servlet-name>
