--- a/SpringMVC-demo1/pom.xml
+++ b/SpringMVC-demo1/pom.xml
@@ -53,6 +53,12 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.12.1</version>
         </dependency>
+        <!-- 文件上传 https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+        </dependency>
 
     </dependencies>
     <build>
